增加前台页面功能（录制上传/克隆 声音）

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ checkpoints/
 
 # Ignore generated sample .wav files
 **/*.wav
+
+# Output directories
+output/
+audio_output/
+temp/
+*.wav
+*.mp3
+*.flac
